plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group 'xss.it.demo'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'xss.it.demo.Demo'
    mainModule = 'demo'
    // Native PDFium is loaded by the nfx.pdfium module via FFM.
    applicationDefaultJvmArgs = ['--enable-native-access=nfx.pdfium']
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}


javafx {
    version = '25.0.1'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
}

dependencies {
    //implementation fileTree(include: ['*.jar'], dir: '../libs')
    implementation project(':pdf-viewer')
}
